--- a/room_exam_kotlin/app/build.gradle
+++ b/room_exam_kotlin/app/build.gradle
@@ -32,6 +32,10 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+  buildFeatures{
+      dataBinding true
+      viewBinding true
+  }
 }
 
 dependencies {
@@ -54,4 +58,5 @@ dependencies {
     // LiveData
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     implementation "androidx.activity:activity-ktx:1.1.0"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-beta01"
 }
